Disable just the script loader during innerHTML sets, not all script execution.  Bug 299231, r=sicking, sr=peterv, a=bsmedberg